src/objects/CompleteForm__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Delivered__c</fullName>
        <label>Delivered</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Produce_Form__c</fullName>
        <label>Produce Form</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_1_Filter__c</fullName>
        <label>Section 1 Filter</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_1__c</fullName>
        <label>Section 1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_2_Filter__c</fullName>
        <label>Section 2 Filter</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_2__c</fullName>
        <label>Section 2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_3_Filter__c</fullName>
        <label>Section 3 Filter</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_3__c</fullName>
        <label>Section 3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Form__c</fullName>
        <label>Send Form</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>CompleteForm</label>
</CustomObject>